this commit edited the font and fixed the spacing of the headers

--- a/expanding_cards/expanding_cards.css
+++ b/expanding_cards/expanding_cards.css
@@ -35,10 +35,11 @@ body{
 .panel h3 {
     font-size: 24px;
     position: absolute;
-    bottom:20px;
-    left:20px;
+    bottom:40px;
+    left:45px;
     margin:0;
     opacity:0;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .panel.active {
